<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activities.ChatHistoryList">
    <item
        android:id="@+id/my_profile"
        android:orderInCategory="100"
        android:title="@string/menu_user_profile_label"
        android:icon="@drawable/ic_user_profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/my_friends"
        android:orderInCategory="100"
        android:title="@string/menu_user_friends_label"
        app:showAsAction="never" />
    <item
        android:id="@+id/my_friend_requests"
        android:orderInCategory="100"
        android:title="@string/menu_friend_request"
        app:showAsAction="never" />
    <item
        android:id="@+id/homePage"
        android:title="@string/menu_home_activity_label"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_home_page" />
    <item
        android:id="@+id/createStory"
        android:title="@string/menu_create_story"
        app:showAsAction="never"
        android:icon="@drawable/ic_home_page" />
</menu>