<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Register_account">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/register_new_account_text"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="52dp"
        android:text="@string/user_email_label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_title" />

    <EditText
        android:id="@+id/register_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_input_hint"
        app:layout_constraintBaseline_toBaselineOf="@+id/register_email_label"
        app:layout_constraintStart_toEndOf="@+id/register_email_label" />

    <TextView
        android:id="@+id/register_username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/register_username_label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email_label" />

    <EditText
        android:id="@+id/register_username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/register_username_hint"
        app:layout_constraintBaseline_toBaselineOf="@+id/register_username_label"
        app:layout_constraintStart_toEndOf="@+id/register_username_label" />

    <TextView
        android:id="@+id/register_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="36dp"
        android:text="@string/register_password_label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_username_label" />

    <EditText
        android:id="@+id/register_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/register_password_hint"
        app:layout_constraintBaseline_toBaselineOf="@+id/register_password_label"
        app:layout_constraintStart_toEndOf="@+id/register_password_label" />

    <TextView
        android:id="@+id/register_confirm_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/register_confirm_password_label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password_label" />

    <EditText
        android:id="@+id/register_confirm_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/register_confirm_password_text"
        app:layout_constraintBaseline_toBaselineOf="@+id/register_confirm_password_label"
        app:layout_constraintStart_toEndOf="@+id/register_confirm_password_label" />

    <Button
        android:id="@+id/register_button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:text="@string/register_button_cancel_label"
        android:background="@android:color/holo_red_light"
        android:textColor="#fff"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/register_button_confirm"
        app:layout_constraintStart_toEndOf="@+id/register_button_confirm"
        android:onClick="cancelRegister"/>

    <Button
        android:id="@+id/register_button_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="60dp"
        android:text="@string/register_button_confirm_label"
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_confirm_password_label"
        android:onClick="confirmRegister"/>

</android.support.constraint.ConstraintLayout>