<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.User_profile">

    <ImageView
        android:id="@+id/user_profile_avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"/>

    <EditText
        android:id="@+id/user_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/user_profile_sample_name"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_avatar" />

    <TextView
        android:id="@+id/user_profile_onlineStatus_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="36dp"
        android:text="@string/user_profile_online_status_label"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_name" />

    <Switch
        android:id="@+id/user_profile_onlineStatus_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toEndOf="@+id/user_profile_onlineStatus_label"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_name" />

    <Button
        android:id="@+id/user_profile_button_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="88dp"
        android:text="@string/user_profile_button_done_label"
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_onlineStatus_label" />

    <Button
        android:id="@+id/user_profile_button_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="88dp"
        android:text="@string/user_profile_button_logout_label"
        android:background="@android:color/holo_red_light"
        android:textColor="#fff"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/user_profile_button_done"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_onlineStatus_switch" />
</android.support.constraint.ConstraintLayout>